--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "three": "^0.121.1",
     "three-orbit-controls": "^82.1.0",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.4.7"
   },
